--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ article {
 		background-color: lightgreen;
 }
 
-.rosepink {
-	color: rosepink;
+.darkorange {
+	color: darkorange;
 }
 
 .crimson {
